// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TransactionsTable renders Actions column as expected 1`] = `
<div>
  <div
    data-testid="FormButton"
  >
    <div
      data-testid="TransactionForm"
    />
  </div>
  <div
    data-testid="FormButton"
  >
    <div
      data-testid="TransactionForm"
    />
  </div>
</div>
`;

exports[`TransactionsTable renders Amount column as expected 1`] = `
<div>
  <span
    class="amount-positive flex items-center"
  >
    <svg
      class="text-xs mr-1"
      fill="currentColor"
      height="1em"
      stroke="currentColor"
      stroke-width="0"
      viewBox="0 0 448 512"
      width="1em"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M34.9 289.5l-22.2-22.2c-9.4-9.4-9.4-24.6 0-33.9L207 39c9.4-9.4 24.6-9.4 33.9 0l194.3 194.3c9.4 9.4 9.4 24.6 0 33.9L413 289.4c-9.5 9.5-25 9.3-34.3-.4L264 168.6V456c0 13.3-10.7 24-24 24h-32c-13.3 0-24-10.7-24-24V168.6L69.2 289.1c-9.3 9.8-24.8 10-34.3.4z"
      />
    </svg>
    €100.00
  </span>
</div>
`;

exports[`TransactionsTable renders Amount column as expected 2`] = `
<div>
  <span
    class="amount-positive flex items-center"
  >
    <svg
      class="text-xs mr-1"
      fill="currentColor"
      height="1em"
      stroke="currentColor"
      stroke-width="0"
      viewBox="0 0 448 512"
      width="1em"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M34.9 289.5l-22.2-22.2c-9.4-9.4-9.4-24.6 0-33.9L207 39c9.4-9.4 24.6-9.4 33.9 0l194.3 194.3c9.4 9.4 9.4 24.6 0 33.9L413 289.4c-9.5 9.5-25 9.3-34.3-.4L264 168.6V456c0 13.3-10.7 24-24 24h-32c-13.3 0-24-10.7-24-24V168.6L69.2 289.1c-9.3 9.8-24.8 10-34.3.4z"
      />
    </svg>
    €100.00
  </span>
</div>
`;

exports[`TransactionsTable renders Date column as expected 1`] = `
<div>
  <span
    data-tooltip-content="tx_guid"
    data-tooltip-id="tx_guid"
  >
    2023-01-01
  </span>
</div>
`;

exports[`TransactionsTable renders FromTo column as expected 1`] = `
<div>
  <ul>
    <li>
      <a
        class="badge mb-0.5 hover:text-slate-300 danger"
        href="/dashboard/accounts/account_guid_2"
      >
        Expenses:expense
      </a>
    </li>
  </ul>
</div>
`;

exports[`TransactionsTable renders Total column as expected 1`] = `
<div>
  <span>
    €250.00
  </span>
</div>
`;
